--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css">
-
+    <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -23,6 +22,20 @@
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+
+      <div class="banner">
+        <div>
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact CV</button>
+        </div>
+        <img src="images/hardy.png" alt="" class="profile-pic">
+      </div>
     </header>
 
     <main></main>
