--- a/index.html
+++ b/index.html
@@ -67,6 +67,139 @@
           </div>
         </div>
       </section>
+
+      <!-- What I do section -->
+      <section class="what-i-do">
+        <div id="what-i-dosection">
+          <h4 class="section-title">What I do</h4>
+          <p class="section-description">
+            I have more than 10 years experience building software for clients
+            all over the world. Below is a quick overview of my main technical
+            skill sets and technologies i use. Want to find out more about my
+            experience? Check out my online resume and project portfolio.
+          </p>
+        </div>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h4 class="skill-title">Vanilla JavaScript</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h4 class="skill-title">React</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h4 class="skill-title">Node.js</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h4 class="skill-title">MongoDB</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Resume Section -->
+      <section>
+        <h4 class="section-title">A summary of My Resume</h4>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-institute">
+                Harvard University / 2015 - 2017
+              </h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Sr. Font End Developer</h2>
+              <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">Jr. Font End Developer</h2>
+              <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">HTML Developer</h2>
+              <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.  
+              </p>
+              <hr />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
