--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/2e8d069b82.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -31,8 +35,12 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-phone"></i> Contact CV
+          </button>
         </div>
         <img src="images/hardy.png" alt="" class="profile-pic" />
       </div>
@@ -198,7 +206,9 @@
           </div>
         </div>
         <div class="download-cv">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
     </main>
@@ -219,10 +229,16 @@
       <div class="footer-column">
         <h3 class="section-title">Let’s Message me</h3>
         <form class="contact">
-          <input type="text" placeholder="Your name">
-          <input type="email" placeholder="Your email" name="" id="">
-          <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
-          <input class="btn-primary" type="submit" value="Submit">
+          <input type="text" placeholder="Your name" />
+          <input type="email" placeholder="Your email" name="" id="" />
+          <textarea
+            name=""
+            placeholder="Message"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Submit" />
         </form>
       </div>
     </footer>
